driver/tests/snap/type_error/pi_apply_non_fn/0_input.splic
// ERROR: applying a non-function value
def test() -> u64 = {
    let x: u64 = 42;
    x(1)
};
